# assured_autonomy_car

./: README.md
catkin_ws/: .gitignore
catkin_ws/src/aa_monitor/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/aa_monitor/include/aa_monitor/utils/: consts.h  utils.h
catkin_ws/src/aa_monitor/launch/: monitor.launch
catkin_ws/src/aa_monitor/src/monitor/: bot_arm6.S  bot_x64.S  monitor_node.cpp
catkin_ws/src/aa_monitor/src/utils/: utils.cpp
catkin_ws/src/aa_planner/: .gitignore  CMakeLists.txt  README.md  deprecated_readme.md  package.xml  setup.py
catkin_ws/src/aa_planner/launch/: aleksey_tests.launch  planner.launch  planner_with_vicon.launch
catkin_ws/src/aa_planner/nodes/: planner
catkin_ws/src/aa_planner/nodes/aa_simulation/: .gitignore  README.md  package.xml
catkin_ws/src/aa_planner/nodes/aa_simulation/demos/: rounded_square.py
catkin_ws/src/aa_planner/nodes/aa_simulation/envs/: base_env.py  renderer.py
catkin_ws/src/aa_planner/nodes/aa_simulation/envs/circle/: circle_env.py  circle_env_ros.py  fast_circle_env.py
catkin_ws/src/aa_planner/nodes/aa_simulation/envs/model/: model.py
catkin_ws/src/aa_planner/nodes/aa_simulation/envs/model/model_params/: mrzr.yml  rccar.yml
catkin_ws/src/aa_planner/nodes/aa_simulation/envs/ros/: __init__.py  base.py  rccar.py
catkin_ws/src/aa_planner/nodes/aa_simulation/envs/straight/: straight_env.py  straight_env_ros.py
catkin_ws/src/aa_planner/nodes/aa_simulation/envs/waypoint/: curvature.py  heading.py  waypoint_env.py  waypoint_env_ros.py
catkin_ws/src/aa_planner/nodes/aa_simulation/misc/: plot.py  utils.py
catkin_ws/src/aa_planner/nodes/aa_simulation/safety_constraints/: circle.py  straight.py  waypoint.py
catkin_ws/src/aa_planner/nodes/aa_simulation/scripts/: eval_policies.sh  eval_policies_to_csv.py  eval_policy.py  export_policy.py
catkin_ws/src/aa_planner/nodes/aa_simulation/test/: test_projection.py  test_straight.py
catkin_ws/src/aa_planner/nodes/aa_simulation/train/: train_circle_planner.py  train_fast_circle_planner.py  train_straight_planner.py  train_waypoint_controller.py
catkin_ws/src/aa_planner/src/aa_planner/: circle_model.save  policy.py  policy_aleksey_fast_circle.py  straight_model.save  waypoint_model_aman_params.save  waypoint_model_aman_params2.save  waypoint_model_edward.save  waypoint_model_edward_params2.save
catkin_ws/src/aa_planner/verification/: WORKSPACE  convert.py  verify
catkin_ws/src/aa_planner/verification/docker/: Dockerfile  build  run
catkin_ws/src/aa_planner/verification/src/: BUILD  layers.cc  layers.h  parsing.cc  parsing.h  pkg_config.bzl  straight.cc  units.cc  units.h  vectorize.cc  vectorize.h
catkin_ws/src/aa_quant_monitor/: ._CMakeLists.txt  ._README.md  CMakeLists.txt  package.xml
catkin_ws/src/aa_quant_monitor/include/aa_monitor/utils/: ._consts.h
catkin_ws/src/aa_quant_monitor/launch/: demo.launch  demo_anwip.launch  monitor.launch
catkin_ws/src/aa_quant_monitor/src/monitor/: ._bot_arm6.S  ._monitor_node.cpp  monitor_node.cpp  plantmonitor.cpp
catkin_ws/src/aa_quant_monitor/src/utils/: ._utils.cpp  utils.cpp
catkin_ws/src/hardware/hardware/: trial_without_lidar_IMU.launch
catkin_ws/src/localization/laser_scan_matcher/src/: icp.cpp  laser_scan_matcher.cpp
catkin_ws/src/localization/localization/: localization.launch  localization.yaml  vb_localization.launch  vb_localization.yaml
catkin_ws/src/localization/vb_to_car/: get_pose_from_transform.py
catkin_ws/src/localization/vicon_bridge/launch/: vicon.launch
catkin_ws/src/obstacle_detector/launch/: nodes_aa.launch
catkin_ws/src/planning/planning/config/: costmap_common_params.yaml
catkin_ws/src/planning/teb_local_planner/src/: .timed_elastic_band.cpp.swp
catkin_ws/src/reach_flow/: CMakeLists.txt  package.xml
catkin_ws/src/reach_flow/launch/: flowstar_with_hardware.launch  flowstar_with_planner.launch  only_flowstar.launch
catkin_ws/src/reach_flow/msg/: FlowstarVisual (copy).msg  FlowstarVisual.msg
catkin_ws/src/reach_flow/src/: .reach_flow.py.swo  all_data.npz  all_data_counter_example.npz  all_data_counter_example2.npz  all_position.npz  counter_eg1.npz  counter_eg10.npz  counter_eg100.npz  counter_eg101.npz  counter_eg102.npz  counter_eg103.npz  counter_eg104.npz  counter_eg105.npz  counter_eg106.npz  counter_eg107.npz  counter_eg108.npz  counter_eg109.npz  counter_eg11.npz  counter_eg110.npz  counter_eg111.npz  counter_eg112.npz  counter_eg113.npz  counter_eg114.npz  counter_eg115.npz  counter_eg116.npz  counter_eg117.npz  counter_eg118.npz  counter_eg119.npz  counter_eg12.npz  counter_eg120.npz  counter_eg121.npz  counter_eg122.npz  counter_eg123.npz  counter_eg124.npz  counter_eg125.npz  counter_eg126.npz  counter_eg127.npz  counter_eg128.npz  counter_eg129.npz  counter_eg13.npz  (+460 more)
catkin_ws/src/reach_flow/src/Exoskeleton/: RC_bicycle.cpp  (+1 more)
catkin_ws/src/sysid/: CMakeLists.txt
catkin_ws/src/sysid/launch/: circle_exp1.launch  circle_exp2.launch  circle_exp3.launch  circle_exp4.launch  circle_exp5.launch  motor_sine.launch  ramp_steer_exp1.launch  ramp_steer_exp2.launch  ramp_steer_exp3.launch  sine_steer_exp1.launch
catkin_ws/src/sysid/src/: circle_exp1.cpp  circle_exp2.cpp  circle_exp3.cpp  circle_exp4.cpp  circle_exp5.cpp  motor_sine.cpp  ramp_steer_exp1.cpp  ramp_steer_exp2.cpp  ramp_steer_exp3.cpp  ramp_steer_v0.cpp  sine_steer_exp1.cpp
catkin_ws/src/user_interface/: CMakeLists.txt  package.xml
catkin_ws/src/user_interface/launch/: joy.launch
catkin_ws/src/user_interface/src/: joy_listener.cpp
doc/: bill of materials.xls  remote_connection.md  setup_instructions.md
matlab_simulator/utils/: dynamics.m
(+6254 files in other folders)
