<?xml version="1.0"?>
<package format="2">
  <name>aa_planner</name>
  <version>0.0.0</version>
  <description>Control the robot with pre-trained policies</description>

  <maintainer email="edhyah@gmail.com">Edward Ahn</maintainer>
  <license>TODO</license>
  <url type="website">https://github.com/r-pad/aa_planner</url>
  <author email="edhyah@gmail.com">Edward Ahn</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>ackermann_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
