<?xml version="1.0"?>
<package format="2">
  <name>aa_simulation</name>
  <version>0.1.0</version>
  <description>Train robot control policies via a ROS interface</description>

  <maintainer email="anogin@hrl.com">Aleksey Nogin</maintainer>
  <license>
  Copyright (C) Carnegie Mellon University and HRL Laboratories, LLC 2019.
  Developed for DARPA and AFRL under Contract No. FA8750-18-C-0092.
  Direct further inquiries to legal@hrl.com.
  </license>
  <url type="website">https://github.hrl.com/AA/cmu_learning/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>marti_common_msgs</build_export_depend>
  <build_export_depend>ackermann_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>marti_common_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
